--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "swiper": "^9.1.0",
     "typescript": "4.9.5"
   },
